[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
description = "Semihosting for RISCV processors"
documentation = "https://docs.rs/riscv-semihosting"
keywords = ["semihosting", "riscv"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"
name = "riscv-semihosting"
readme = "README.md"
repository = "https://github.com/soc-hub-fi/pulpissimo-riscv"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[features]
u-mode = []
jlink-quirks = []
no-semihosting = []
default = ["jlink-quirks"]

[dependencies]
critical-section = "1.0.0"
riscv = { path = "../riscv", version = "0.11.0" }
